--- a/archives.html
+++ b/archives.html
@@ -32,6 +32,8 @@
       <p>Best Dota2 Team in Nanhui</p>
       <nav>
         <ul class="list">
+          <li><a href="http://lzl-team.tk/pages/about.html#about">About</a></li>
+          <li><a href="http://lzl-team.tk/pages/members.html#members">Members</a></li>
         </ul>
       </nav>
       <ul class="social">
@@ -46,6 +48,8 @@
   </header>
   <div>
     <dl>
+      <dt>周二 22 十二月 2015</dt>
+      <dd><a href="http://lzl-team.tk/recent-matches.html">Recent Matches</a></dd>
     </dl>
   </div>
 </article>
