--- a/pages/about.html
+++ b/pages/about.html
@@ -69,7 +69,7 @@
 </tr>
 <tr>
 <td align="center">138060623</td>
-<td><img alt="" src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/f2/f2c3bfb3389771fdc01af571c45289c816b44e4a.jpg" />0x5f3759df</td>
+<td><img alt="" src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/f2/f2c3bfb3389771fdc01af571c45289c816b44e4a.jpg" />在带着咸味的空气中自由地呼吸</td>
 <td align="center">三号位 辅助</td>
 </tr>
 <tr>
@@ -93,8 +93,13 @@
 </article>
 
     <footer>
-      <p>&copy; Leohc92 2015</p>
+        <p>&copy; Leohc92 2015</p>
 <p>Built using <a href="http://getpelican.com" target="_blank">Pelican</a> - <a href="https://github.com/alexandrevicenzi/flex" target="_blank">Flex</a> theme by <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a></p>    </footer>
   </main>
+
+
+
+
+
 </body>
 </html>
