--- a/tags.html
+++ b/tags.html
@@ -32,6 +32,8 @@
       <p>Best Dota2 Team in Nanhui</p>
       <nav>
         <ul class="list">
+          <li><a href="http://lzl-team.tk/pages/about.html#about">About</a></li>
+          <li><a href="http://lzl-team.tk/pages/members.html#members">Members</a></li>
         </ul>
       </nav>
       <ul class="social">
