--- a/pages/about.html
+++ b/pages/about.html
@@ -59,7 +59,7 @@
 <tbody>
 <tr>
 <td align="center">171753897</td>
-<td><img alt="" src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/f4/f4f479e1f61d10422aabf947f03da202ea87ed21.jpg" />临港大乌贼</td>
+<td><img alt="" src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/f4/f4f479e1f61d10422aabf947f03da202ea87ed21.jpg" />申嘉湖车神</td>
 <td align="center">一号位 SOLO</td>
 </tr>
 <tr>
@@ -79,7 +79,7 @@
 </tr>
 <tr>
 <td align="center">157934874</td>
-<td><img alt="" src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/8b/8b543d88e1d179d26a86331e2387b0ca8b7a1c18.jpg" />大团老黑鱼</td>
+<td><img alt="" src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/8b/8b543d88e1d179d26a86331e2387b0ca8b7a1c18.jpg" />WoXiang.赢一把就吃饭</td>
 <td align="center">辅助</td>
 </tr>
 <tr>
